--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
     "start": "webpack-dev-server --https --mode development --open --host localhost",
-    "dev": "webpack-dev-server --mode development --https --host 0.0.0.0"
+    "dev": "webpack-dev-server --mode development --https --host 0.0.0.0",
+    "deploy": "firebase deploy",
+    "init": "firebase init"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,7 @@
   "dependencies": {
     "dotenv-webpack": "^1.5.5",
     "firebase": "^4.11.0",
+    "firebase-tools": "^3.18.4",
     "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
     "webpack-cli": "^2.0.11",
